adding profile pcture upload for students (testing in production is needed)

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -20,5 +20,9 @@
   <%= @student.card_id %>
 </p>
 
+<p>
+  <%= image_tag @student.picture.url if @student.picture? %>
+</p>
+
 <%= link_to 'Edit', edit_student_path(@student) %> |
 <%= link_to 'Back', students_path %>
