--- a/app/views/manual_attendance_recording/search.html.erb
+++ b/app/views/manual_attendance_recording/search.html.erb
@@ -1,5 +1,8 @@
 
 <% if @error.nil? %>
+  <p>
+    <%= image_tag @student.picture.url if @student.picture? %>
+  </p>
   <p>First Name: <%= @student.first_name %></p>
   <p>Last Name: <%= @student.last_name %></p>
   <p>SAM Student ID: <%= @student.sam_student_id %></p>
