--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -11,6 +11,14 @@
     </div>
   <% end %>
 
+  <div class="form-group">
+    <%= form.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", placeholder: "Email" %>
+  </div>
+    
+  <div class="form-group">
+    <%= form.password_field :password, autocomplete: "off", class: "form-control", placeholder: "Password" %>
+  </div>
+
   <div class="field">
     <%= form.label :sam_student_id %>
     <%= form.text_field :sam_student_id, id: :student_sam_student_id %>
@@ -34,4 +42,17 @@
   <div class="actions">
     <%= form.submit %>
   </div>
+  
+  <span class="picture">
+    <%= form.file_field :picture, accept: 'image/jpeg,image/gif,image/png' %>
+  </span>
 <% end %>
+
+<script type="text/javascript">
+  $('#user_picture').bind('change', function() {
+    var size_in_megabytes = this.files[0].size/1024/1024;
+    if (size_in_megabytes > 5) {
+      alert('Maximum file size is 5MB. Please choose a smaller file.');
+    }
+  });
+</script>
