adding navbar and toastr gem for UI notifications

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,9 @@
  */
 /*Custom bootstrap variables must be set or imported *before* bootstrap.
 */
+@import "toastr";
 @import "bootstrap";
+
 
 body {  
   color: #565a5c;
