adding dashboard, update manual attendance recording, add styling, update navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,17 +10,15 @@
 
   <body>
     <%= render 'shared/navbar' %>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-<% unless flash.empty? %>
-     <script type="text/javascript">
-          <% flash.each do |f| %>
-	      <% type = f[0].to_s.gsub('alert', 'error').gsub('notice', 'info') %>
-	     	 toastr['<%= type %>']('<%= f[1] %>');
-	   <% end %>
-     </script>
-<% end %>
-    <div class="container">
+    <% unless flash.empty? %>
+         <script type="text/javascript">
+              <% flash.each do |f| %>
+    	      <% type = f[0].to_s.gsub('alert', 'error').gsub('notice', 'info') %>
+    	     	 toastr['<%= type %>']('<%= f[1] %>');
+    	   <% end %>
+         </script>
+    <% end %>
+    <div class="container-main container">
       <%= yield %>
     </div>
   </body>
