--- a/app/views/manual_attendance_recording/index.html.erb
+++ b/app/views/manual_attendance_recording/index.html.erb
@@ -1,6 +1,7 @@
+<div class="col-md-12 text-center mx-auto">
 <p><b>Your current practicals:</b></p>
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-6 offset-3">
     <% if @error.nil? %>
         <% @practicals.each do |practical| %>
             <h1><%= practical.course.course_title %></h1>
@@ -19,5 +20,6 @@
         <p><%= @error %></p>
     <% end %>
   </div>
+</div>
 </div>
 
