--- a/app/views/pending_practicals/new.html.erb
+++ b/app/views/pending_practicals/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Pending Practical</h1>
+<br>
+<div class="col-md-12 text-center mx-auto">
+<h1>Start Practical on Device</h1>
 
 <%= render 'form', pending_practical: @pending_practical %>
 
-<%= link_to 'Back', pending_practicals_path %>
+<%#= link_to 'Back', pending_practicals_path %>
+</div>
