--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,5 +21,6 @@
     <div class="container-main container">
       <%= yield %>
     </div>
+    <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
