--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,5 +22,6 @@
       <%= yield %>
     </div>
     <%= debug(params) if Rails.env.development? %>
+    <%= debug(session[:user_type]) if Rails.env.development? %>
   </body>
 </html>
