--- a/app/views/staffs/managec6s.html.erb
+++ b/app/views/staffs/managec6s.html.erb
@@ -1,6 +1,6 @@
 <div class="col-md-auto">
 <div class="col-md-6 col-md-offset-3 text-center mx-auto">
-<%=form_tag({controller: "staffs", action: "dashboard"}, method: "get", class: "nifty_form") do %>
+<%=form_tag({controller: "staffs", action: "manage_c6s"}, method: "get", class: "nifty_form") do %>
   <div class="row">
     <div class="col-12">
     <div class="form-group col-6 col-md-auto">
