--- a/app/views/manual_attendance_recording/search.html.erb
+++ b/app/views/manual_attendance_recording/search.html.erb
@@ -7,8 +7,8 @@
   <p>Last Name: <%= @student.last_name %></p>
   <p>SAM Student ID: <%= @student.sam_student_id %></p>
   <p>Course: <%= @course.course_title %></p>
-  <%=form_tag({controller: "manual_attendance_recording", action: "attendance_recording"}, method: "get", class: "nifty_form") do %>
-    <%= hidden_field_tag(:course_id, @course_id) %>
+  <%=form_tag({controller: "manual_attendance_recording", action: "attendance_recording"}, method: "post", class: "nifty_form") do %>
+    <%= hidden_field_tag(:practical_id, @practical_id) %>
     <%= hidden_field_tag(:student_id, @student.id) %>
     <%= hidden_field_tag(:sam_student_id, @student.sam_student_id) %>
     <div class="actions">
