refactoring code for manual attendance recording and remote practical initilisation

--- a/app/views/manual_attendance_recording/index.html.erb
+++ b/app/views/manual_attendance_recording/index.html.erb
@@ -2,8 +2,8 @@
 <p><b>Your current practicals:</b></p>
 <div class="row">
   <div class="col-md-6 offset-3">
-    <% if @error.nil? %>
-        <% @practicals.each do |practical| %>
+
+        <% @current_practicals.each do |practical| %>
             <h1><%= practical.course.course_title %></h1> <p>Location: <%= practical.location %></p> 
             <%=form_tag({controller: "manual_attendance_recording", action: "search"}, method: "get", class: "nifty_form") do %>
             <div class="form-group">
@@ -17,9 +17,7 @@
             <% end %>
             <br>
         <% end %>  
-    <% else %>
-        <p><%= @error %></p>
-    <% end %>
+
   </div>
 </div>
 </div>
