fix issue with selecting demonstrators for upcoming practicals

--- a/app/views/staffs/add_demonstrator.html.erb
+++ b/app/views/staffs/add_demonstrator.html.erb
@@ -5,18 +5,25 @@
     <div class="form-group">
       <%= text_field_tag :sam_student_id, nil, autofocus: true, autocomplete: "off", class: "form-control", placeholder: "Enter Student ID" %>
     </div>
-    <div class="form-group">
-      <%= label_tag(:practical_ids, "Select Practicals:") %>
-    </div>
-    <div class="form-group">
-      <ul>
-        <%=collection_check_boxes(:practical_ids, :practical_ids, @practicals_of_course[course.course_title], :id, :start_time) do |b| %>
-        <li>
-          <%= b.label(:"data-value" => b.value) { b.check_box + "Start time: #{b.text}" } %>
-        </li>
-        <% end %>
+    <% if @practicals_of_course[course.course_title].empty?%>
+      <div class="form-group">
+        <p>No upcoming practicals for the courses</p>
+      </div>
+    <%else%>
+      <div class="form-group">
+        <%= label_tag(:practical_ids, "Select from the upcoming Practicals for the course:") %>
+      </div>
+      <div class="form-group">
+        <ul>
+          <%=collection_check_boxes(:practical_ids, :practical_ids, @practicals_of_course[course.course_title], :id, :start_time) do |b| %>
+          <li>
+            <%= b.label(:"data-value" => b.value) { b.check_box + "Start time: #{b.text}" } %>
+          </li>
+          <% end %>
         </ul>
-    </div>
+      </div>
+    <%end%>
+    
     <div class="actions">
       <%= submit_tag("Add Demonstrator", class: "btn btn-primary") %>
     </div>
