--- a/app/views/staffs/demonstrator_list.html.erb
+++ b/app/views/staffs/demonstrator_list.html.erb
@@ -9,7 +9,7 @@
     Demonstrator(s):
     <ul>
     <% content.each do |counter,demonstrator| %>
-      <li>ID: <%= demonstrator[:sam_demonstrator_id]%>, Name: <%= demonstrator[:first_name] %> <%= demonstrator[:last_name] %> </li>
+      <li>ID: <%= demonstrator[:sam_demonstrator_id]%>, Name: <%= demonstrator[:first_name] %> <%= demonstrator[:last_name] %>, Email: <%= demonstrator[:email] %> </li>
     <% end %>
     </ul>
     </li>
