--- a/app/views/staffs/manage_c6s.html.erb
+++ b/app/views/staffs/manage_c6s.html.erb
@@ -20,16 +20,22 @@
   <div class="col-md-auto">
   <% if !(@hash[course.course_title].empty?) %>
     <h1>Course Title: <%= course.course_title %> </h1>
-
+    <ul>
     <% @hash[course.course_title].each do |certificate| %>
+    <li>
     <div class="row">
-      <div class="col-md-auto">
-        <b>Student ID: <%= certificate.student.sam_student_id %>, Name: <%= certificate.student.first_name %> <%= certificate.student.last_name %> </b>
+      
+      <div class="col-sm">
+          <b>Student ID: <%= certificate.student.sam_student_id %>, Name: <%= certificate.student.first_name %> <%= certificate.student.last_name %> </b>
+      </div>
       <% name = "#{certificate.student.first_name} #{certificate.student.last_name}" %>
-      <%= link_to 'Remove C6', remove_c6_path(certificate_id: certificate.id, student_name: name), data: { confirm: 'Are you sure?' }, class: "btn btn-primary" %>
+      <div class="col-sm">
+        <%= link_to 'Remove C6', remove_c6_path(certificate_id: certificate.id, student_name: name), data: { confirm: "Do you want to remove C6 for #{name}?" }, class: "btn btn-primary" %>
       </div>
     </div>
+    </li>
     <% end %>
+    </ul>
     <br>
   <% end %>
   </div>
