--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
     <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item <%= "active" if request.original_fullpath == dashboard_path %> ">
-                <%= link_to "Dashboard", dashboard_path, class: "nav-link" %> 
+                <%= link_to "Dashboard", dashboard_path, class: "nav-link" if current_user %> 
             </li>
             <li class="nav-item <%= "active" if request.original_fullpath == record_path %> ">
                 <%= link_to "Manual Attendance Recording", record_path, class: "nav-link" if ["staff_course_coordinator_and_demonstrator", "staff_course_coordinator", "staff_demonstrator", "student_demonstrator"].include?(session[:user_type])%>
