--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,9 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark ">
     <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
         <ul class="navbar-nav mr-auto">
+            <li class="nav-item <%= "active" if request.original_fullpath == root_path %> ">
+                <%= link_to "Home", root_path, class: "nav-link" if !current_user%> 
+            </li>
             <li class="nav-item <%= "active" if request.original_fullpath == dashboard_path %> ">
                 <%= link_to "Dashboard", dashboard_path, class: "nav-link" if current_user %> 
             </li>
