--- a/app/views/homepages/dashboard.html.erb
+++ b/app/views/homepages/dashboard.html.erb
@@ -1,2 +1,16 @@
-<h1>Homepages#dashboard</h1>
-<p>Find me in app/views/homepages/dashboard.html.erb</p>
+
+<div class="col-md-12 mx-auto">
+<% @courses.each do |course|%>
+  <h1 class=""><%= course.course_title %> </h1>
+  <p> Students enrolled: <%= @num_of_students_enrolled %> </p>
+  <ul>
+  <% course.practicals.each do |practical| %>
+    <li>
+    <h5>Practical on <%= practical.start_time.strftime("%A, %H:%M %d-%m-%Y") %></h5>
+    <p> Students attended the practical:<%= practical.attendances.count %> </p>
+    <%= link_to "See Details", practical_details_path(practical_id: practical.id) %>
+    </li>
+  <% end %>
+  </ul>
+<% end %>
+</div>
