adding basic dashboard

--- a/app/views/homepages/dashboard.html.erb
+++ b/app/views/homepages/dashboard.html.erb
@@ -1,11 +1,13 @@
 
 <div class="col-md-12 mx-auto">
 <% @practicals_on_specific_weeks.each do |course_title, content|%>
+  
   <h1 class=""><%= course_title %> </h1>
   <p><b>Number of enrolled students: <%= @num_of_students_enrolled[course_title] %> </b></p>
   <ul>
   <% content.each_with_index do |practicals, index| %>
     <h3> Practical <%= index+1 %> </h3>
+    <p> Students attended: <%= @attendance_statistics[course_title][index] %>/<%= @num_of_students_enrolled[course_title] %></p>
     <ul>
     <% practicals.each do |practical|%>
       <li>
@@ -17,5 +19,6 @@
       <hr>
   <% end %>
   </ul>
+
 <% end %>
 </div>
