--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
  *
  *= require_tree .
  *= require_self
+ *= require nvd3
  */
 /*Custom bootstrap variables must be set or imported *before* bootstrap.
 */
