sepatating dashboard and statistics + updating practical details view

--- a/app/views/homepages/dashboard.html.erb
+++ b/app/views/homepages/dashboard.html.erb
@@ -1,24 +1,23 @@
-
-<div class="col-md-12 mx-auto">
-<% @practicals_on_specific_weeks.each do |course_title, content|%>
-  
-  <h1 class=""><%= course_title %> </h1>
-  <p><b>Number of enrolled students: <%= @num_of_students_enrolled[course_title] %> </b></p>
-  <ul>
-  <% content.each_with_index do |practicals, index| %>
-    <h3> Practical <%= index+1 %> </h3>
-    <p> Students attended: <%= @attendance_statistics[course_title][index] %>/<%= @num_of_students_enrolled[course_title] %></p>
-    <ul>
-    <% practicals.each do |practical|%>
-      <li>
-        <%= practical.start_time %>
-        <%= link_to "See details", practical_details_path(practical_id: practical.id) %>
-      </li>
-    <% end %>
-    </ul>
-      <hr>
-  <% end %>
-  </ul>
-
-<% end %>
-</div>
+<ul>
+  <li>
+    <%= link_to "Init practical", remote_path%>
+  </li>
+  <li>
+    <%= link_to "Record attendance", record_path%>
+  </li>
+  <li>
+    <%= link_to "List Demonstrators", demonstrator_list_path %>
+  </li>
+  <li>
+    <%= link_to "Add Demonstrator to Practical(s)", add_demonstrator_path%>
+  </li>
+  <li>
+    <%= link_to "Delete Demonstrator from Practical(s)", delete_demonstrator_path%>
+  </li>
+  <li>
+    <%= link_to "Manage C6s", manage_c6s_path if ["staff_course_coordinator_and_demonstrator", "staff_course_coordinator", "staff_as_demonstrator", "student_demonstrator"].include?(session[:user_type])%>
+  </li>
+  <li>
+    <%= link_to "Attendande Statistics", attendance_statistics_path%>
+  </li>
+</ul>
