adding attendance statistics for certain student (finished,testing needed)

--- a/app/views/homepages/dashboard.html.erb
+++ b/app/views/homepages/dashboard.html.erb
@@ -20,4 +20,7 @@
   <li>
     <%= link_to "Attendande Statistics", attendance_statistics_path%>
   </li>
+   <li>
+    <%= link_to "Attendande Statistics for certain student", attendance_statistics_for_certain_student_path%>
+  </li>
 </ul>
