Style demonstrator list

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,10 @@ body {
   background-color: #F8F8F8;
 }
 
+.primary-color {
+  background-color: #343a40;
+}
+
 .container-main {
 	width: 80%;
 }
