--- a/app/views/staffs/manage_c6s.html.erb
+++ b/app/views/staffs/manage_c6s.html.erb
@@ -16,11 +16,38 @@
 <br>
 <br>
 
+<div id="accordion">
 <% @courses.each do |course| %>
-  <div class="col-md-auto">
   <% if !(@hash[course.course_title].empty?) %>
-    <h1>Course Title: <%= course.course_title %> </h1>
-    <ul >
+    <div class="card primary-color">
+      <div class="card-header">
+        <a class="card-link" data-toggle="collapse" href="#<%= course.course_title %>"><%= course.course_title %></a>
+      </div>
+      <div id="<%= course.course_title %>" class="collapse" data-parent="#accordion">
+        <div class="card-body">
+          <table class="table table-dark table-striped">
+                          <thead>
+                            <tr>
+                              <th>ID</th>
+                              <th>Firstname</th>
+                              <th>Lastname</th>
+                              <th>Email</th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <% @hash[course.course_title].each do |certificate| %>
+                            <tr>
+                              <td><%= certificate.student.sam_student_id %></td>
+                              <td><%= certificate.student.first_name %> </td>
+                              <td><%= certificate.student.last_name %></td>
+                              <td><%= demonstrator[:email] %></td>
+                            </tr>
+                            <% end %>
+                          </tbody>
+                        </table>
+        </div>
+      </div>
+    </div>
     <% @hash[course.course_title].each do |certificate| %>
     <li>
     <div class="row">
