--- a/app/views/staffs/manage_c6s.html.erb
+++ b/app/views/staffs/manage_c6s.html.erb
@@ -31,7 +31,7 @@
                               <th>ID</th>
                               <th>Firstname</th>
                               <th>Lastname</th>
-                              <th>Email</th>
+                              <th>C6</th>
                             </tr>
                           </thead>
                           <tbody>
@@ -40,7 +40,7 @@
                               <td><%= certificate.student.sam_student_id %></td>
                               <td><%= certificate.student.first_name %> </td>
                               <td><%= certificate.student.last_name %></td>
-                              <td><%= demonstrator[:email] %></td>
+                              <td><%= link_to 'Remove', remove_c6_path(certificate_id: certificate.id, student_name: name), data: { confirm: "Do you want to remove C6 for #{name}?" }, class: "btn btn-primary" %></td>
                             </tr>
                             <% end %>
                           </tbody>
