--- a/app/views/staffs/manage_c6s.html.erb
+++ b/app/views/staffs/manage_c6s.html.erb
@@ -1,20 +1,19 @@
-<div class="col-md-auto">
-<div class="col-md-6 col-md-offset-3 text-center mx-auto">
+<div class="col-md-12 mx-auto">
+
+<div class="col-md-12 text-center mx-auto">
 <%=form_tag({controller: "staffs", action: "manage_c6s"}, method: "get", class: "nifty_form") do %>
   <div class="row">
-    <div class="col-12">
-    <div class="form-group col-6 col-md-auto">
+    <div class="form-group col-8">
       <%= text_field_tag :sam_student_id, nil, autofocus: true, autocomplete: "off", class: "form-control", placeholder: "Search Student by ID" %>
     </div>
-    <div class="actions col-6 col-md-auto">
-      <%= submit_tag "Search", class: "btn btn-primary" %>
-    </div>
+    <div class="actions col-4">
+      <%= submit_tag "Search", class: "btn btn-primary float-left" %>
     </div>
   </div>
 <% end %>
 </div>
-<br>
-<br>
+
+
 
 <div id="accordion">
 <% @courses.each do |course| %>
@@ -28,44 +27,30 @@
           <table class="table table-dark table-striped">
                           <thead>
                             <tr>
-                              <th>ID</th>
-                              <th>Firstname</th>
-                              <th>Lastname</th>
-                              <th>C6</th>
+                              <th class="text-center">ID</th>
+                              <th class="text-center">Firstname</th>
+                              <th class="text-center">Lastname</th>
+                              <th class="text-center">C6</th>
+                              <th class="text-center">Attendance History</th>
                             </tr>
                           </thead>
                           <tbody>
                             <% @hash[course.course_title].each do |certificate| %>
                             <tr>
-                              <td><%= certificate.student.sam_student_id %></td>
-                              <td><%= certificate.student.first_name %> </td>
-                              <td><%= certificate.student.last_name %></td>
-                              <td><%= link_to 'Remove', remove_c6_path(certificate_id: certificate.id, student_name: name), data: { confirm: "Do you want to remove C6 for #{name}?" }, class: "btn btn-primary" %></td>
+                              <td class="text-center align-middle"><%= certificate.student.sam_student_id %></td>
+                              <td class="text-center align-middle"><%= certificate.student.first_name %> </td>
+                              <td class="text-center align-middle"><%= certificate.student.last_name %></td>
+                              <% name = "#{certificate.student.first_name} #{certificate.student.last_name}" %>
+                              <td class="text-center align-middle"><%= link_to 'Open', attendance_history_path(course_id: course.id, sam_student_id: certificate.student.sam_student_id), class: "btn btn-info" %></td>
+                               <td class="text-center align-middle"><%= link_to 'Remove', remove_c6_path(certificate_id: certificate.id, student_id: certificate.student), data: { confirm: "Do you want to remove C6 for #{name}?" }, class: "btn btn-primary" %></td>
                             </tr>
                             <% end %>
                           </tbody>
-                        </table>
+          </table>
         </div>
       </div>
     </div>
-    <% @hash[course.course_title].each do |certificate| %>
-    <li>
-    <div class="row">
-      <div class="col-sm">
-          <b>Student ID: <%= certificate.student.sam_student_id %>, Name: <%= certificate.student.first_name %> <%= certificate.student.last_name %> </b>
-      </div>
-      <% name = "#{certificate.student.first_name} #{certificate.student.last_name}" %>
-      <div class="col-sm">
-        <%= link_to 'Remove C6', remove_c6_path(certificate_id: certificate.id, student_name: name), data: { confirm: "Do you want to remove C6 for #{name}?" }, class: "btn btn-primary" %>
-        <%= link_to 'See attendance history of student', attendance_history_path(course_id: course.id, sam_student_id: certificate.student.sam_student_id) %>
-      </div>
-    </div>
-    </li>
     <% end %>
-    </ul>
-    <br>
   <% end %>
-  </div>
-<% end %>
 </div>
-  
+</div>
